# UnitTest

selfgtest/checkjson/: CMakeLists.txt
selfgtest/checkjson/include/: jsoncheckfun.h
selfgtest/checkjson/src/: foo.h  jsoncheckfun.cpp  main.cpp  myclass.cpp
selfgtest/checkjson/tests/: CMakeLists.txt  fooTest.cpp  fooTest.h  jsonchecktest.cpp  test_my_class.cpp
selfgtest/smartwash/: CMakeLists.txt
selfgtest/smartwash/include/: logprint.h  singleton.h  smartwash.h
selfgtest/smartwash/main/: main.cpp
selfgtest/smartwash/src/: singleton.cpp  smartwash.cpp
selfgtest/smartwash/test/: CMakeLists.txt  smartwashtest.cpp
